# hydroponic-automation-embassy

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
src/hardware/: ezo.rs  mod.rs  motor.rs
src/tasks/: dose.rs  mod.rs  networking.rs  state.rs
